# engrava-benchmark

./: .commitlintrc.js  .cursorrules  .gitignore  AGENTS.md  BRANCHING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  leaderboard.json  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: branch-name-guard.yml  ci.yml  commitlint.yml  secret-scan.yml
adapters/: README.md  __init__.py  base.py  engrava_adapter.py
docs/: comparability.md  methodology.md
integrations/: __init__.py
integrations/amb_vectorize/: README.md  __init__.py  engrava_provider.py
integrations/longmemeval_v2/: README.md  SYSTEM_DESCRIPTION.md  __init__.py  engrava_memory.py  memory_config.json
results/: README.md
results/longmemeval-s/engrava/: lme-s_engrava_0.5.0_2026-07-10.json
results/longmemeval-s/engrava/lme-s_engrava_0.5.0_2026-07-10/: hypotheses.jsonl  retrieval_log.jsonl
results/longmemeval-s/longmemeval-official/engrava/: lme-s_engrava_0.5.0_2026-07-10.json
results/longmemeval-s/longmemeval-official/engrava/lme-s_engrava_0.5.0_2026-07-10/: config.json  judge_labels.jsonl  manifest.json
results/schema/: results.schema.json
runners/: __init__.py
runners/longmemeval/: READER_UPSTREAM.md  README.md  __init__.py  artifact.py  emit.py  mock_models.py  official_reader.py  openai_models.py  run.py  scorer.py
runners/longmemeval/config/: default.json
runners/longmemeval/official_scorer/: UPSTREAM.md  __init__.py  evaluate_qa.py
scripts/: __init__.py  build_leaderboard.py  canonical_slugs.py  preflight.py  validate_results.py
tests/: conftest.py  test_amb_vectorize_provider.py  test_artifact.py  test_base_adapter.py  test_build_leaderboard.py  test_cli_and_factories.py  test_engrava_adapter.py  test_leakage_guard.py  test_local_llm.py  test_longmemeval_v2_memory.py  test_official_reader.py  test_preflight.py  test_results_layout.py  test_runner_smoke.py  test_validate_results.py
tests/docs/: _md_blocks.py  test_docs_reproduce_example_execute.py
tests/fixtures/: longmemeval_smoke.json
