[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engrava-benchmark"
version = "0.2.0"
description = "Public reproduction surface for Engrava's memory-benchmark numbers: pluggable adapters, uniform runners, machine-readable results."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Sovantica" }]
keywords = ["benchmark", "memory", "llm", "agents", "longmemeval", "reproduction"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    # `engrava` is required to RUN the Engrava adapter, but is pinned at
    # reproduction time (clone -> pip install engrava==<version-from-result>).
    # The repo itself is not a pip package; the unit of distribution is the repo.
    "jsonschema>=4.21",
    # The official reader's context assembly truncates with the gpt-4o tokenizer;
    # the assembly runs in the offline smoke path too, so this is a core dependency.
    "tiktoken>=0.7",
]

[project.optional-dependencies]
# The Engrava adapter + runner need the public engrava package + a sqlite driver.
engrava = [
    "engrava==0.5.0",
    "aiosqlite>=0.20",
]
# The OpenAI-direct reader + judge for a real (paid) canonical run.
openai = [
    "openai>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.11",
    "numpy==2.1.3",  # pinned: numpy>=2.2 ships 3.12+ stub syntax that breaks mypy on the py311 target
    "coverage>=7.5",
    "jsonschema>=4.21",
    "detect-secrets>=1.5",
]

[project.urls]
Homepage = "https://github.com/sovantica/engrava-benchmark"
Documentation = "https://engrava.ai"

[tool.setuptools]
# Library-style packages discovered for type checking / imports.
packages = [
    "adapters",
    "runners",
    "runners.longmemeval",
    "runners.longmemeval.official_scorer",
    "scripts",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["runners/**/_cache"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["INP001"]
# The runner pipeline legitimately wires several injected seams (adapter, reader,
# judge, scorer) — the argument count reflects the dependency-injection design.
"runners/**/*" = ["INP001", "PLR0913"]
"tests/*" = ["S101", "SLF001", "INP001", "PLR2004", "ANN", "D"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["aiosqlite.*", "engrava.*", "jsonschema.*", "torch.*", "openai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["adapters", "runners", "scripts"]
omit = [
    # Live-IO surfaces exercised only by a real (paid) run or a downloaded model;
    # per the testing conventions we do not hit live external APIs/models in CI.
    # Their construction + error guards ARE covered; the network/model call bodies
    # are out of scope for the unit gate.
    "adapters/engrava_adapter.py",
    "runners/longmemeval/openai_models.py",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "if __name__ == .__main__.:",
]
